MDEV-4848 Wrong metadata or column type for LEAST(1.0,'10') MDEV-8873 Wrong field type or metadata for LEAST(int_column,string_column)